:bug: Fix insecure mixed content
We had both https and http requests over our website.

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -82,7 +82,7 @@ secondweek:
   - title: "Workshop de Adobe Illustrator"
     date: 8 de Dezembro
     time: 21h00
-    place: <a target="_blank" href="http://meet.google.com/toa-zfwg-irx">Google Meet</a>
+    place: <a target="_blank" href="https://meet.google.com/toa-zfwg-irx">Google Meet</a>
     image: activities/Marketing.jpg
     typeform: 
     text: 
@@ -92,7 +92,7 @@ secondweek:
   - title: "Hour of Code"
     date: 9 de Dezembro
     time: 16h00
-    place: <a target="_blank" href="http://meet.google.com/cna-fybh-efo">Google Meet</a>
+    place: <a target="_blank" href="https://meet.google.com/cna-fybh-efo">Google Meet</a>
     image: activities/Marketing.jpg
     typeform: 
     text: | 
