--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -4,7 +4,7 @@
   full-width: false
 - title:
   logo-image: aaum.png
-  site: http://www.aaum.pt/
+  site: https://www.aaum.pt/
   full-width: true
 - title:
   logo-image: nemum.png
