new partners and holiday img

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -37,3 +37,8 @@
   logo-image: aecrimum.png
   site: https://www.facebook.com/aecrimum/
   full-width: true
+
+- title:
+  logo-image: nelaum.png
+  site: https://www.facebook.com/NELAUM/
+  full-width: true
