--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,17 +1,59 @@
 contributions:
-  - title: Contribuir em árvores de natal
+  - title: Contribuir em cabazes de natal
     logo-image: christmas-tree.ico
-    text: De modo a envolver e apelar à participação de toda a comunidade académica, desde alunos, funcionários, professores a possíveis visitantes para ajudar quem mais precisa, por toda a Universidade do Minho, poderás encontrar algumas árvores de natal e muitas decorações e enfeites, onde estarão colocados cabazes para recolha de bens, porque por mais pequena que seja a nossa contribuição, todos juntos faremos a diferença.
+    text: |
+      De modo a envolver e apelar à participação de toda a comunidade académica, desde alunos, funcionários, professores a possíveis 
+      visitantes para ajudar quem mais precisa, por toda a Universidade do Minho, poderás encontrar <strong>cabazes</strong>, 
+      identificados com a iniciativa, para <strong>recolha de bens alimentares, peças de vestuário e brinquedos</strong>, porque por 
+      mais pequena que seja a nossa contribuição, todos juntos faremos a diferença.
 
   - title: Contribuir ao participar nos eventos listados
     logo-image: gift.png
-    text: Ainda de modo a criar um espírito de partilha e de solidariedade entre todos durante este mês, todos os Núcleos, Associações e Secções participantes nesta iniciativa irão também cobrar como entrada para participação nas suas atividades ou num grupo de atividades específico bens alimentares, peças de vestuário e brinquedos que irão posteriormente ser colocados nos cabazes para serem entregues às instituições.
+    text: |
+      Ainda de modo a criar um espírito de partilha e de solidariedade entre todos durante este mês, todos os <strong>Núcleos, 
+      Associações e Secções</strong> participantes nesta iniciativa irão também cobrar na participação nas suas atividades, ou 
+      num grupo de atividades específico, a <strong>doação de bens alimentares, peças de vestuário ou brinquedos</strong> num 
+      dos <strong>cabazes</strong> espalhados pela Universidade ou a <strong>doação por MB Way ou transferência</strong> para 
+      uma <strong>instituição de solidariedade</strong> à escolha. No MB Way já existe a opção de fazer doações em “Ser Solidário”.
+    subtext: "Estas são 5 das inúmeras instituições para as quais podem ser feitas as doações nas atividades ao longo de todo o mês de dezembro:"
+    donations-section:
+      - name: Cruz Vermelha Braga
+        mbway: 918 391 794
+        iban: PT50 0035 0027 0002 5871 9322 7
+        site: https://braga.cruzvermelha.pt/
+      - name: Operação Nariz Vermelho
+        mbway: 937 929 911
+        iban: PT50 0036 0310 99100011439 56
+        site: https://www.narizvermelho.pt/
+      - name: Banco Alimentar Braga
+        mbway: 917 491 866
+        iban: PT50 0033 0000 45420028841 05
+        site: https://www.bancoalimentar.pt/bancos/braga/
+      - name: Aldeias de Crianças SOS
+        mbway: 932 020 854
+        iban: PT50 0036 0088 991000 13262 51
+        site: https://www.aldeias-sos.org/
+      - name: Liga Portuguesa Contra o Cancro
+        mbway: 912 043 200
+        iban: PT50 0033 0000 00045773469 76
+        site: https://www.ligacontracancro.pt/
+
+  - title: Partilha connosco a tua doação
+    logo-image: contribuir.png
+    text: |
+      Este ano pela primeira vez incentivamos a doação por <strong>MB Way ou transferência a uma instituição de solidariedade</strong> 
+      na participação das atividade do Dezembro Solidário. Sendo possível também a doação de um <strong>bem alimentar, peças de 
+      vestuário ou brinquedos</strong> num dos cabazes colocados pela Universidade. Envia-nos o teu <strong>comprovativo da doação</strong>.
+    button-name: Participação
+    button-link: https://forms.gle/fg2ZATDUwHhoucgQ8
+
 
 #corrida:
 #  - title: Corrida Social
 #    logo-image: corridacartaz.jpg
 #    text: A Semana Social e o Dezembro Solidário uniram-se para uma nova edição da Corrida Social! É já no próximo sábado, 15 de Dezembro, pelas 10:00 horas no Pavilhão Desportivo de Gualtar que esperamos ver-te nesta iniciativa. A novidade desta edição? Baixámos o valor das inscrições para que possas trazer um bem alimentar para doar a uma instituição!
-#    typeform: https://goo.gl/forms/ZjgcZUvy2uZik4hA3
+#    button-name: Nome do Botão
+#    button-link: https://forms.gle/fg2ZATDUwHhoucgQ8
 
 
 # exemplo de atividade ########################################################################
@@ -21,82 +63,84 @@ contributions:
   #  place: Laboratório 007 do ICS
   #  image: activities/pladodecom.jpg
   #  org: <a target="_blank" href="https://www.facebook.com/gaccuminho/">GACCUM</a>
-  #  typeform: https://goo.gl/forms/nbEUijalezwiKEDo2
+  #  button-name: Nome do Botão
+  #  button-link: https://forms.gle/fg2ZATDUwHhoucgQ8
   #  text: Na sequência dos três workshops, de "Alunos para alunos", o GACCUM tem o prazer de anunciar o terceiro, e último, workshop 'Plano de Comunicação- construção, execução e criatividade'. 
   #  speaker: Diogo José Fernandes
 ###############################################################################################
 
 firstweek:
-  - title: "Comunicação e Marketing: Let's Talk"
-    date: 4 de Dezembro
-    time: 16h30
-    place: Auditório 1.01 da EEG
-    image: activities/Marketing.jpg
-    typeform:
-    text:
-    speaker: Sara Dias & Inês Braz
-    org: <a target="_blank" href="http://gaccum.weebly.com/">GACCUM</a>
-
-  - title: Fusão Nuclear
-    date: 4 de Dezembro
-    place: Tasquinha Bracarense Bar
-    image: activities/fusaonuclear.png
-    typeform:
-    text: "O Natal está a chegar e com ele o espírito de solidariedade para com os mais necessitados. Neste sentido, o CeSIUM, em parceria com vários núcleos da Universidade do Minho e no âmbito do Dezembro Solidário, organizou a Fusão Nuclear! 
-    Esta trata-se de uma festa noturna onde te poderás divertir em conjunto com alunos de outros cursos. Para tal, apenas tens de adquirir o teu cartão da Fusão Nuclear por apenas 2€ e terás direito a 3 finos ou um balde de bebida branca.
-    A festa decorrerá no próximo dia 4 de dezembro, na Tasquinha Bracarense Bar e poderás ainda fazer um depósito de alimentos durante a tarde dos dias 3 e 4 na Tasquinha Bracarense.
-    Contamos contigo para nos ajudar a espalhar a magia do Natal!"
-
-  - title: Why Linux?
-    date: 5 de Dezembro
-    time: 17h
-    place: Auditório A2 do DI
-    image: activities/whylinux.png
-    typeform:
-    text:
-    speaker: Carlos Ferreira
   
 secondweek:
-  - title: Hour of Code
-    date: 
-    time: 
-    place: 
-    image: 1.png
-    typeform:
-    text:
-    speaker: Carlos Ferreira
+  - title: "CAOS Launch Program"
+    date: 7 de Dezembro
+    time: 18h00
+    place: TBA
+    image: 
+    typeform: 
+    text: |
+      Programa de aprendizagem faseado e estruturado cujo objetivo é o desenvolvimento de competências na área de Web Development.
+      Os alunos podem ingressar em um de três percursos distintos: Miners Guild (FullStack com Ruby e a Framework Rails), Order 
+      of the Phoenix (Backend com Elixir e a Framework Phoenix) e Fallout Institute (Frontend com JavaScript e a Framework  React), 
+      onde podem ganhar skills específicas numa fase inicial para depois se juntarem a uma Launch Team e desenvolver projetos para 
+      o CeSIUM.
+    speaker: 
+    org: 
 
-  - title: Workshop de Public Speaking
-    date: 11 de Dezembro
-    time: 14h30
-    place: B-lounge da Biblioteca de Azurém
-    image: activities/public.png
-    typeform:
-    text:
-    speaker: Toastmasters
-    org: <a target="_blank" href="https://www.facebook.com/NEEMAT.UMinho/">NEEMAT</a>
+  - title: "Workshop de Adobe Illustrator"
+    date: 8 de Dezembro
+    time: 21h00
+    place: <a target="_blank" href="https://meet.google.com/toa-zfwg-irx">Google Meet</a>
+    image: 
+    typeform: 
+    text: |
+      Workshop sobre ferramenta Adobe Illustrator no qual ser apresentada uma vista global, começando por conceitos básicos 
+      desde fonts, cores (CMKY e RGB) ou objetos e layers. Evoluindo depois para as diferentes ferramentas Shape Tolls e Curvature 
+      Toll. Por fim, serão apresentandos alguns efeitos e truques mais avançados tais como Drop Shadow, Feather, Inner Glow, entre 
+      outros.
+    speaker: Luis Araújo
+    org: 
+
+  - title: "Hour of Code"
+    date: 9 de Dezembro
+    time: 16h00
+    place: <a target="_blank" href="https://meet.google.com/cna-fybh-efo">Google Meet</a>
+    image: 
+    typeform: 
+    text: | 
+      Workshop de uma hora projetada para desmistificar o conceito de programação, mostrando que qualquer pessoa pode aprender o 
+      básico de 'coding'. Nesta edição vamos para o lado mais artístico da programação, ensinando-te a codificar o teu próprio 
+      caleidoscópio!
+    speaker: Alexandre Gomes
+    org: 
+
 thirdweek:
-  - title: Visita ao Hospital
-    date: 18 de Dezembro
-    time: 15h30 
-    place: Hospital de Braga
-    image: 1.png
-    typeform:
-    text:
-  - title: Visita Oficina de S.José
-    date: 19 de Dezembro
-    time: 14h30 
-    place: Oficina de S.José
-    image: 1.png
-    typeform:
-    text:
-  - title: Visita à Casa da Criança
-    date: 20 de Dezembro
-    time:  
-    place: Casa da Criança de Guimarães
-    image: 1.png
-    typeform:
-    text:
+  - title: "Dungeons and Dragons"
+    date: 15 de Dezembro
+    time: 20h00
+    place: TBA
+    image: activities/dad.png
+    typeform: 
+    text: | 
+      Dungeons and Dragons é um jogo de tabuleiro de roleplay no qual podem ser o que quiserem. O único limite será a vossa imaginação. 
+      Um jogo aonde as decisões de cada jogador possuem o poder de afetar por completo a história a ser contada e onde as regras são 
+      muitas vezes apenas sugestões.
+      Dungeons and Dragons sendo um jogo de tabuleiro requer que todos os elementos de um grupo joguem numa sala para algumas horas 
+      de roleplay e diversão. Face ao corrente estado de pandemia somos forçados a adaptar um pouco a experiência, passando a usar a 
+      plataforma Roll20 de modo a possibilitar uma experiência de D&D à distância.
+
+    speaker: 
+    org: 
 
 fourthweek:
-  
+  - title: "Geek Night"
+    date: 21 de Dezembro
+    time: 21h30
+    place: TBA
+    image: 
+    typeform: 
+    text: | 
+      Talk de curta duração que visa promover a cultura informática num ambiente informal, através da partilha de curiosidades, 
+      experiências e projetos pessoais.
+    speaker: 
+    org: 
