--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: |
   através de incentivos à solidariedade da comunidade académica.
 source_link: "https://github.com/cesium/dezembro_solidario"
 favicon:     "img/christmas-tree.ico"
-touch_icon:  "img/apple-touch-icon.png"
+touch_icon:  "img/tree.png"
 google_analytics_key: UA-67237593-9 ## put YOUR key here to enable tracking! (blank to disable)
 
 
