update nas atividades

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -76,7 +76,7 @@ secondweek:
     date: 7 de Dezembro
     time: 18h00
     place: TBA
-    image: 
+    image: activities/launch.png
     typeform: 
     text: |
       Programa de aprendizagem faseado e estruturado cujo objetivo é o desenvolvimento de competências na área de Web Development.
@@ -85,7 +85,7 @@ secondweek:
       onde podem ganhar skills específicas numa fase inicial para depois se juntarem a uma Launch Team e desenvolver projetos para 
       o CeSIUM.
     speaker: 
-    org: 
+    org: CeSIUM
 
   - title: "Workshop de Adobe Illustrator"
     date: 8 de Dezembro
@@ -99,11 +99,11 @@ secondweek:
       Toll. Por fim, serão apresentandos alguns efeitos e truques mais avançados tais como Drop Shadow, Feather, Inner Glow, entre 
       outros.
     speaker: Luis Araújo
-    org: 
+    org: CeSIUM
 
   - title: "Hour of Code"
     date: 9 de Dezembro
-    time: 16h00
+    time: 18h00
     place: <a target="_blank" href="https://meet.google.com/cna-fybh-efo">Google Meet</a>
     image: 
     typeform: 
@@ -112,7 +112,7 @@ secondweek:
       básico de 'coding'. Nesta edição vamos para o lado mais artístico da programação, ensinando-te a codificar o teu próprio 
       caleidoscópio!
     speaker: Alexandre Gomes
-    org: 
+    org: CeSIUM
 
 thirdweek:
   - title: "Dungeons and Dragons"
@@ -128,9 +128,24 @@ thirdweek:
       Dungeons and Dragons sendo um jogo de tabuleiro requer que todos os elementos de um grupo joguem numa sala para algumas horas 
       de roleplay e diversão. Face ao corrente estado de pandemia somos forçados a adaptar um pouco a experiência, passando a usar a 
       plataforma Roll20 de modo a possibilitar uma experiência de D&D à distância.
-
     speaker: 
-    org: 
+    org: CeSIUM
+
+  - title: "Noite Solidária de BA"
+    date: 18 de Dezembro
+    time: 21h30
+    place: 
+    image: activities/nsolid.jpeg
+    typeform: https://forms.gle/u7N7mTNQPciWVVPU6
+    text: | 
+      Com o intuito de ajudar quem precisa e dinamizar um pouco a interação entre alunos de vários cursos, o NEBAUM, Núcleo de Estudantes de 
+      Biologia Aplicada, convida-te a ti e aos teus colegas a juntarem-se a nós, virtualmente, numa noite de jogos onde o melhor prémio é a 
+      diversão!
+      Esta atividade consistirá na participação em diversos jogos desde Among Us, Code Names, Stop, até Free Fire, onde jogarás em equipa com 
+      colegas teus ou de outros cursos. Terás a oportunidade de passar uma noite diferente, dinâmica e animada! Portanto, junta-te a nós e 
+      mostra o que vales!
+    speaker: 
+    org: NEBAUM
 
 fourthweek:
   - title: "Geek Night"
@@ -143,4 +158,4 @@ fourthweek:
       Talk de curta duração que visa promover a cultura informática num ambiente informal, através da partilha de curiosidades, 
       experiências e projetos pessoais.
     speaker: 
-    org: 
+    org: CeSIUM
