--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,3 +1,7 @@
+- title:
+  logo-image: nebaum.png
+  site: https://nebaum.wixsite.com/uminho
+
 # - title:
 #   logo-image: deb.png
 #   site: https://www.deb.uminho.pt/
