--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -105,7 +105,7 @@ secondweek:
     date: 9 de Dezembro
     time: 18h00
     place: <a target="_blank" href="https://meet.google.com/cna-fybh-efo">Google Meet</a>
-    image: 
+    image: activities/hourcode.png
     typeform: 
     text: | 
       Workshop de uma hora projetada para desmistificar o conceito de programação, mostrando que qualquer pessoa pode aprender o 
