--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -2,6 +2,10 @@
   logo-image: nebaum.png
   site: https://nebaum.wixsite.com/uminho
 
+- title:
+  logo-image: MODUM.png
+  site: https://www.facebook.com/Aemodum-Associa%C3%A7%C3%A3o-de-Estudantes-de-Moda-da-Universidade-do-Minho-106943984250980/
+
 # - title:
 #   logo-image: deb.png
 #   site: https://www.deb.uminho.pt/
