--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -19,13 +19,13 @@
   full-width: true
 
 - title:
-  logo-image: MODUM.png
-  site: https://www.facebook.com/nucleoaececum/
+  logo-image: NEDUM.png
+  site: https://www.ie.uminho.pt/pt/Ensino/Paginas/Nucleos-de-Estudantes.aspx
   full-width: true
 
 - title:
-  logo-image: NEDUM.png
-  site: https://www.ie.uminho.pt/pt/Ensino/Paginas/Nucleos-de-Estudantes.aspx
+  logo-image: direito.png
+  site: http://aedum.com/
   full-width: true
 
 - title:
