--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -6,6 +6,14 @@
   logo-image: MODUM.png
   site: https://www.facebook.com/Aemodum-Associa%C3%A7%C3%A3o-de-Estudantes-de-Moda-da-Universidade-do-Minho-106943984250980/
 
+- title:
+  logo-image: NEEMAT.png
+  site: https://www.facebook.com/NEEMAT.UMinho/
+
+- title:
+  logo-image: direito.png
+  site: http://aedum.com/
+
 # - title:
 #   logo-image: deb.png
 #   site: https://www.deb.uminho.pt/
