--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -168,7 +168,7 @@ thirdweek:
     date: 16 de dezembro
     time: 21h00
     place: TBA
-    image: 
+    image: activities/convivio.png
     typeform: 
     text: | 
       Convívio no Discord de MIEI no qual poderás passar um bom tempo com os teus colegas de curso numa dinâmica com diversos jogos, 
@@ -224,7 +224,7 @@ fourthweek:
     date: 21 de dezembro
     time: 21h30
     place: TBA
-    image: 
+    image: activities/geek.png
     typeform: 
     text: | 
       Talk de curta duração que visa promover a cultura informática num ambiente informal, através da partilha de curiosidades, 
