--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@heroicons/react": "^1.0.5",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-scroll": "^1.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
